<resources>
    <string name="app_name">League of Legends Farm Tracker</string>
    <string name="enemies">Enemies</string>
    <string name="allies">Allies</string>
    <string name="zero">0</string>
    <string name="reset">reset</string>
    <string name="caster_minion">Caster Minion</string>
    <string name="melee_minion">Melee Minion</string>
    <string name="siege_minion">Siege Minion</string>
</resources>
