<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"

        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content">
            <TextView
                style="@style/TeamNameTextView"
                android:text="@string/allies"
                android:layout_gravity="center"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                style="@style/ScoreTextView"
                android:id="@+id/team_a_score"
                android:text="@string/zero"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                android:text="@string/siege_minion"
                android:onClick="siegeMinionForAllies"
                style="@style/ScoreButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:text="@string/melee_minion"
                android:onClick="meleeMinionForAllies"
                style="@style/ScoreButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:text="@string/caster_minion"
                android:onClick="casterMinionForAllies"
                style="@style/ScoreButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@android:color/darker_gray"/>

        <LinearLayout
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content">
            <TextView
                style="@style/TeamNameTextView"
                android:text="@string/enemies"
                android:layout_gravity="center"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                style="@style/ScoreTextView"
                android:id="@+id/team_b_score"
                android:text="@string/zero"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                android:text="@string/siege_minion"
                android:onClick="siegeMinionForEnemies"
                style="@style/ScoreButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:text="@string/melee_minion"
                android:onClick="meleeMinionForEnemies"
                style="@style/ScoreButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:text="@string/caster_minion"
                android:onClick="casterMinionForEnemies"
                style="@style/ScoreButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>

    <Button
        style="@style/Widget.AppCompat.Button.Colored"
        android:onClick="reset"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="32dp"
        android:text="@string/reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</RelativeLayout>
